# mbrman

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: lib.rs
tests/fixtures/: disk1.img  disk2.img
