[package]
name = "mbrman"
version = "0.4.2"
authors = ["Cecile Tonglet <cecile.tonglet@cecton.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "MBR Partition Management in Rust"
repository = "https://github.com/cecton/mbrman"
homepage = "https://github.com/cecton/mbrman"
documentation = "https://docs.rs/mbrman"
readme = "README.md"
keywords = ["mbr", "partition", "table", "filesystem", "disk"]
categories = []
include = ["src/**/*.rs", "tests/fixtures/*.img", "README.md", "LICENSE.Apache-2.0", "LICENSE.MIT"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = "0.22"
bincode = "1.0.1"
serde = { version = "1.0.116", features = ["derive"] }
thiserror = "1.0.24"
